- acpi: ec_sys: access user space with get_user()/put_user()   (none).

--- a/series.conf
+++ b/series.conf
@@ -261,6 +261,8 @@
 	patches.arch/acpi_srat-pxm-rev-ia64.patch
 	patches.arch/acpi_srat-pxm-rev-x86-64.patch
 
+	# Queued for 2.6.36 -> just revert after some time
+	patches.fixes/acpi_ec_sys_access_user_space_with_get_user.patch
 	########################################################
 	# CPUFREQ
 	########################################################
@@ -447,6 +449,7 @@
 
 	patches.drivers/disable-catas_reset-by-default-to-avoid-problems-with-eeh.patch
 
+	# Queued for 2.6.37 -> just revert after some time
 	patches.drivers/dynamic_debug_1.patch
 	patches.drivers/dynamic_debug_2.patch
 	patches.drivers/dynamic_debug_3.patch
