- Update to 2.6.36-rc6.   - Eliminated 2 patches.

--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/patch-2.6.36-rc2-rc3
 	patches.kernel.org/patch-2.6.36-rc3-rc4
 	patches.kernel.org/patch-2.6.36-rc4-rc5
+	patches.kernel.org/patch-2.6.36-rc5-rc6
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -295,7 +296,6 @@
         # Networking, IPv6
         ########################################################
 	patches.fixes/bridge-module-get-put.patch
-	patches.fixes/rose-fix-signedness-issues-wrt-digi-count
 
 	########################################################
 	# NFS
@@ -512,7 +512,6 @@
 	patches.suse/wireless-no-aes-select
 	patches.suse/b43-missing-firmware-info.patch
 	patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices
-	patches.fixes/wext-fix-potential-private-ioctl-memory-content-leak
 
 	########################################################
 	# iSCSI
