- AppArmor: compatibility patch for v5 interface.

--- a/series.conf
+++ b/series.conf
@@ -618,6 +618,7 @@
 	# AppArmor
 	##########################################################
 	patches.apparmor/apparmor-compatibility-patch-for-v5-network-control
+	patches.apparmor/apparmor-compatibility-patch-for-v5-interface
 
 
 	########################################################
