- AppArmor: compatibility patch for v5 network control.

--- a/series.conf
+++ b/series.conf
@@ -617,6 +617,8 @@
 	##########################################################
 	# AppArmor
 	##########################################################
+	patches.apparmor/apparmor-compatibility-patch-for-v5-network-control
+
 
 	########################################################
 	# Address space layout randomization
