- AppArmor: Allow dfa backward compatibility with broken   userspace.

--- a/series.conf
+++ b/series.conf
@@ -619,6 +619,7 @@
 	##########################################################
 	patches.apparmor/apparmor-compatibility-patch-for-v5-network-control
 	patches.apparmor/apparmor-compatibility-patch-for-v5-interface
+	patches.apparmor/apparmor-allow-dfa-backward-compatibility-with-broken-userspace
 
 
 	########################################################
