--- a/series.conf
+++ b/series.conf
@@ -33,6 +33,7 @@
 	patches.kernel.org/patch-2.6.36-rc3-rc4
 	patches.kernel.org/patch-2.6.36-rc4-rc5
 	patches.kernel.org/patch-2.6.36-rc5-rc6
+	patches.kernel.org/patch-2.6.36-rc6-rc7
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
