--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -167,7 +167,7 @@ Obsoletes:      ocfs2-kmp-%build_flavor
 Obsoletes:      quickcam-kmp-%build_flavor < 0.6.7
 
 # Provide the exported symbols as "ksym(symbol) = hash"
-%define __find_provides %_sourcedir/find-provides %my_builddir %name
+%define __find_provides %_sourcedir/find-provides %name
 
 # Will modules not listed in supported.conf abort the kernel build (0/1)?
 %define supported_modules_check 0
@@ -460,9 +460,6 @@ make vdso_install $MAKE_ARGS INSTALL_MOD_PATH=%buildroot
 dd if=/dev/zero of=%buildroot/boot/initrd-%kernelrelease-%build_flavor \
 	bs=1024 seek=2047 count=1
 
-# Figure out where the symbols that vmlinux exports are defined.
-%_sourcedir/built-in-where < Module.symvers > Module.symvers.split
-
 if [ %CONFIG_MODULES = y ]; then
     mkdir -p %rpm_install_dir/%cpu_arch_flavor
     mkdir -p %buildroot/usr/src/linux-obj/%cpu_arch
@@ -548,7 +545,7 @@ if [ %CONFIG_MODULES = y ]; then
         # check for kabi changes
         %_sourcedir/kabi.pl --rules %my_builddir/kabi/severities \
             %my_builddir/kabi/%cpu_arch/symvers-%build_flavor \
-            Module.symvers.split || res=$?
+            Module.symvers || res=$?
     fi
     if [ $res -ne 0 ]; then
 	if [ ! -e %my_builddir/kabi/%cpu_arch/ignore-%build_flavor -a \
@@ -562,40 +559,6 @@ if [ %CONFIG_MODULES = y ]; then
 
     tar -cf - -T %my_builddir/obj-files | \
 	tar -xf - -C %rpm_install_dir/%cpu_arch_flavor
-    # generate symsets
-    mkdir -p %my_builddir/{base,main,extra}-symsets
-    for f in %my_builddir/{base,main,unsupported}-modules; do
-        if [ -f "$f" ]; then
-            sed 's:^/:%buildroot/:' "$f"
-        fi > "$f-br"
-    done
-    reference=
-    if test -e %my_builddir/kabi/%cpu_arch/symsets-@FLAVOR@.tar.gz; then
-        tar xzf %my_builddir/kabi/%cpu_arch/symsets-@FLAVOR@.tar.gz -C \
-	    %my_builddir/kabi/%cpu_arch
-        reference="--reference %my_builddir/kabi/%cpu_arch/symsets-*-@FLAVOR@/"
-    fi
-    %_sourcedir/symsets.pl --generate-symsets \
-        $reference \
-        --symvers=Module.symvers.split \
-        --modules=%my_builddir/base-modules-br \
-        --output-dir=%my_builddir/base-symsets
-%if %split_base
-    %_sourcedir/symsets.pl --generate-symsets \
-        $reference \
-        --modules=%my_builddir/main-modules-br \
-        --required-modules=%my_builddir/base-modules-br \
-        --output-dir=%my_builddir/main-symsets
-%endif
-%if %split_extra
-    %_sourcedir/symsets.pl --generate-symsets \
-        $reference \
-        --modules=%my_builddir/unsupported-modules-br \
-        --required-modules=%my_builddir/base-modules-br \
-        --required-modules=%my_builddir/main-modules-br \
-        --output-dir=%my_builddir/extra-symsets
-%endif
-
     # bnc#507084
     find %rpm_install_dir/%cpu_arch_flavor/scripts -type f -perm -111 | \
         while read f; do
@@ -607,13 +570,6 @@ if [ %CONFIG_MODULES = y ]; then
     # Replace the absolute with a relative path
     sed -i "s,%build_src_dir,../../../linux-%kernelrelease%variant,g" \
 	%rpm_install_dir/%cpu_arch_flavor/Makefile
-    symsets=%my_builddir/symsets-%kernelrelease-%build_flavor
-    mkdir -p $symsets
-    find %my_builddir/{base,main,extra}-symsets -type f \
-	| xargs --replace='{}' cp '{}' $symsets/
-    tar c -C ${symsets%/*} ${symsets##*/} \
-	| gzip -9 \
-	> %buildroot/boot/symsets-%kernelrelease-%build_flavor.tar.gz
 fi
 
 add_dirs_to_filelist() {
@@ -636,7 +592,7 @@ add_dirs_to_filelist() {
 # Collect the file lists.
 shopt -s nullglob
 > %my_builddir/kernel-devel.files
-for file in %buildroot/boot/vmlinux-*.gz %buildroot/boot/sym{sets,types}* \
+for file in %buildroot/boot/vmlinux-*.gz %buildroot/boot/symtypes* \
 				%buildroot/lib/modules/*/{build,source}; do
 	f=${file##%buildroot}
 	echo "$f" >> %my_builddir/kernel-devel.files
