--- a/series.conf
+++ b/series.conf
@@ -785,6 +785,7 @@
 	patches.xen/xen3-patch-2.6.36-rc3
 	patches.xen/xen3-patch-2.6.36-rc3-rc4
 	patches.xen/xen3-patch-2.6.36-rc4-rc5
+	patches.xen/xen3-patch-2.6.36-rc6-rc7
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-mark_rodata_rw.patch
@@ -821,7 +822,7 @@
 	patches.xen/xen-netback-kernel-threads
 	patches.xen/xen-netback-extend-pull
 	patches.xen/xen-netback-allow-large-mtu
-	patches.xen/xen-netfront-ethtool
+	patches.xen/xen-tmem-v1
 	patches.xen/xen-dcdbas
 	patches.xen/xen-floppy
 	patches.xen/xen-kzalloc
