- Update to 2.6.36-rc8.

--- a/series.conf
+++ b/series.conf
@@ -34,6 +34,7 @@
 	patches.kernel.org/patch-2.6.36-rc4-rc5
 	patches.kernel.org/patch-2.6.36-rc5-rc6
 	patches.kernel.org/patch-2.6.36-rc6-rc7
+	patches.kernel.org/patch-2.6.36-rc7-rc8
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -43,6 +44,7 @@
 	patches.rpmify/tioca-fix-assignment-from-incompatible-pointer-warnings
 	patches.rpmify/ia64-mca-fix-cast-from-integer-to-pointer-warning
 	patches.rpmify/qla4xx-missing-readq-definition
+	patches.rpmify/export-dump_-write-seek.patch
 
         ########################################################
         # kABI consistency patches
