- ACPI: Make Embedded Controller command timeout delay   configurable (bnc#639261).

--- a/series.conf
+++ b/series.conf
@@ -267,6 +267,8 @@
 
 	# Queued for 2.6.36 -> just revert after some time
 	patches.fixes/acpi_ec_sys_access_user_space_with_get_user.patch
+
+	patches.arch/acpi_ec_delay_param.patch
 	########################################################
 	# CPUFREQ
 	########################################################
