- SoN: fix null pointer dereference in swap_entry_free. - SoN: fix mess up on swap with multi files from same nfs server. - Refresh patches.xen/tmem.

--- a/series.conf
+++ b/series.conf
@@ -435,6 +435,8 @@
 	patches.suse/SoN-28-nfs-alloc-recursions.patch
 	patches.suse/SoN-29-fix-swap_sync_page-race
 	patches.suse/SoN-30-fix-uninitialized-var.patch
+	patches.suse/SoN-31-fix-null-pointer-dereference
+	patches.suse/SoN-32-fix-kernel-bug-with-multiple-swapfiles
 
 	# don't want to rediff SoN until this gets more testing 
 	patches.suse/slab-handle-memoryless-nodes-v2a.patch
