- ALSA: hda - Add workarounds for CT-IBG controllers (bnc#564324).

--- a/series.conf
+++ b/series.conf
@@ -560,6 +560,7 @@
 	##########################################################
 	patches.drivers/alsa-hda-01-Fix-wrong-SPDIF-NID-assignment-for-CA0110
 	patches.drivers/alsa-hda-02-Add-some-workarounds-for-Creative-IBG
+	patches.drivers/alsa-hda-03-Add-workarounds-for-CT-IBG-controllers
 
 	########################################################
 	# Other driver fixes
