--- a/series.conf
+++ b/series.conf
@@ -559,6 +559,7 @@
 	# Sound
 	##########################################################
 	patches.drivers/alsa-hda-01-Fix-wrong-SPDIF-NID-assignment-for-CA0110
+	patches.drivers/alsa-hda-02-Add-some-workarounds-for-Creative-IBG
 
 	########################################################
 	# Other driver fixes
