--- a/series.conf
+++ b/series.conf
@@ -782,10 +782,7 @@
 	patches.xen/xen3-patch-2.6.33
 	patches.xen/xen3-patch-2.6.34
 	patches.xen/xen3-patch-2.6.35
-	patches.xen/xen3-patch-2.6.36-rc3
-	patches.xen/xen3-patch-2.6.36-rc3-rc4
-	patches.xen/xen3-patch-2.6.36-rc4-rc5
-	patches.xen/xen3-patch-2.6.36-rc6-rc7
+	patches.xen/xen3-patch-2.6.36
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-mark_rodata_rw.patch
@@ -817,6 +814,7 @@
 	patches.xen/xen-configurable-guest-devices
 	patches.xen/xen-netback-nr-irqs
 	patches.xen/xen-netback-notify-multi
+	patches.xen/xen-netback-sched-list-remove
 	patches.xen/xen-netback-generalize
 	patches.xen/xen-netback-multiple-tasklets
 	patches.xen/xen-netback-kernel-threads
