--- a/series.conf
+++ b/series.conf
@@ -573,6 +573,7 @@
 	# Allow setting maximum number of raw devices
 	patches.suse/raw_device_max_minors_param.diff
 	patches.suse/no-partition-scan
+	patches.fixes/hpet-unmap-unused-I-O-space.patch
 
 	########################################################
 	# Other drivers we have added to the tree
