- net: Limit socket I/O iovec total length to INT_MAX   (bnc#650128).

--- a/series.conf
+++ b/series.conf
@@ -514,7 +514,7 @@
         patches.drivers/tg3-entropy-source.patch
 
 	patches.drivers/tg3-5785-and-57780-asic-revs-not-working.patch
-
+	patches.fixes/net-Limit-socket-I-O-iovec-total-length.patch
 
 	########################################################
 	# Wireless Networking
