- novfs: Fix for the issue of kernel dumps core on restart   (bnc#641811).

--- a/series.conf
+++ b/series.conf
@@ -372,6 +372,7 @@
 	patches.fixes/novfs-lindent
 	patches.suse/novfs-fix-ioctl-usage
 	patches.suse/novfs-use-evict_inode
+	patches.fixes/novfs-unlink-oops
 
 	########################################################
 	# other filesystem stuff: richacls
