- resources: add a default alignf to simplify find_resource()   (bnc#651256). - resources: factor out resource_clip() to simplify   find_resource() (bnc#651256). - resources: ensure callback doesn't allocate outside available   space (bnc#651256). - resources: handle overflow when aligning start of available area   (bnc#651256). - resources: support allocating space within a region from the   top down (bnc#651256). - PCI: allocate bus resources from the top down (bnc#651256). - x86/PCI: allocate space from the end of a region, not the   beginning (bnc#651256). - x86: update iomem_resource end based on CPU physical address   capabilities (bnc#651256). - x86: allocate space within a region top-down (bnc#651256). - Refresh patches.xen/xen3-patch-2.6.34.

--- a/series.conf
+++ b/series.conf
@@ -89,6 +89,16 @@
 	patches.fixes/make-note_interrupt-fast.diff
 	patches.fixes/twl6030-fix-note_interrupt-call
 
+	patches.fixes/res-0001-resources-add-a-default-alignf-to-simplify-find_reso.patch
+	patches.fixes/res-0002-resources-factor-out-resource_clip-to-simplify-find_.patch
+	patches.fixes/res-0003-resources-ensure-callback-doesn-t-allocate-outside-a.patch
+	patches.fixes/res-0004-resources-handle-overflow-when-aligning-start-of-ava.patch
+	patches.fixes/res-0005-resources-support-allocating-space-within-a-region-f.patch
+	patches.fixes/res-0006-PCI-allocate-bus-resources-from-the-top-down.patch
+	patches.fixes/res-0007-x86-PCI-allocate-space-from-the-end-of-a-region-not-.patch
+	patches.fixes/res-0008-x86-update-iomem_resource-end-based-on-CPU-physical-.patch
+	patches.fixes/res-0009-x86-allocate-space-within-a-region-top-down.patch
+
         ########################################################
         # Architecture-specific patches. These used to be all
         # at the end of series.conf, but since we don't do
