- TTY: restore tty_ldisc_wait_idle (bnc#642043).

--- a/series.conf
+++ b/series.conf
@@ -467,6 +467,8 @@
 	patches.drivers/dynamic_debug_6.patch
 	patches.drivers/dynamic_debug_7.patch
 
+	patches.fixes/tty-restore-tty_ldisc_wait_idle.patch
+
 	########################################################
 	# Storage
 	########################################################
