- supported.conf: Added missing dependencies.

--- a/supported.conf
+++ b/supported.conf
@@ -1689,6 +1689,7 @@
 		kernel/drivers/scsi/bfa/bfa
 		kernel/drivers/scsi/bnx2i/bnx2i
 		kernel/drivers/scsi/ch					# device driver for scsi media changer devices
+		kernel/drivers/scsi/cxgbi/libcxgbi
 		kernel/drivers/scsi/cxgb3i/cxgb3i			# Chelsio S3 iSCSI initiator driver
 		kernel/drivers/scsi/dc395x				# SCSI host adapter driver for Tekram TRM-S1040 based adapters: Tekram DC395 and DC315 series
 		kernel/drivers/scsi/device_handler/scsi_dh
@@ -2266,6 +2267,7 @@
 		kernel/net/ipv4/esp4
 		kernel/net/ipv4/inet_diag				# Module for monitoring INET transport protocols sockets
 		kernel/net/ipv4/ipcomp					# IP Payload Compression Protocol (IPComp) - RFC3173
+		kernel/net/ipv4/gre
 		kernel/net/ipv4/ip_gre
 		kernel/net/ipv4/ipip
 # provided separately in the cluster-network KMP
@@ -2363,6 +2365,7 @@
 		kernel/net/ipv6/netfilter/ip6t_REJECT			# IP6 tables REJECT target module
 		kernel/net/ipv6/netfilter/ip6t_mh
 		kernel/net/ipv6/netfilter/ip6t_rt			# IPv6 RT match
+		kernel/net/ipv6/netfilter/nf_defrag_ipv6
 		kernel/net/ipv6/netfilter/nf_conntrack_ipv6
 		kernel/net/ipv6/sit
 		kernel/net/ipv6/tunnel6
