- PCI: fix pci_bus_alloc_resource() hang, prefer positive decode   (bnc#651256).

--- a/series.conf
+++ b/series.conf
@@ -98,6 +98,7 @@
 	patches.fixes/res-0007-x86-PCI-allocate-space-from-the-end-of-a-region-not-.patch
 	patches.fixes/res-0008-x86-update-iomem_resource-end-based-on-CPU-physical-.patch
 	patches.fixes/res-0009-x86-allocate-space-within-a-region-top-down.patch
+	patches.fixes/res-0010-PCI-fix-pci_bus_alloc_resource-hang-prefer-positive-.patch
 
         ########################################################
         # Architecture-specific patches. These used to be all
