--- a/series.conf
+++ b/series.conf
@@ -30,6 +30,7 @@
 	patches.kernel.org/patch-2.6.37-rc1
 	patches.kernel.org/patch-2.6.37-rc1-rc2
 	patches.kernel.org/patch-2.6.37-rc2-rc3
+	patches.kernel.org/patch-2.6.37-rc3-git1
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
