--- a/series.conf
+++ b/series.conf
@@ -38,4 +38,5 @@
 	# will be included in the vanilla package.
 	########################################################
 	patches.rpmify/firmware-path
+	patches.rpmify/easycap-buildfix
 
