- Update to 2.6.37-rc4.

--- a/series.conf
+++ b/series.conf
@@ -30,7 +30,7 @@
 	patches.kernel.org/patch-2.6.37-rc1
 	patches.kernel.org/patch-2.6.37-rc1-rc2
 	patches.kernel.org/patch-2.6.37-rc2-rc3
-	patches.kernel.org/patch-2.6.37-rc3-git6
+	patches.kernel.org/patch-2.6.37-rc3-rc4
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
