--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -452,7 +452,7 @@ suffix=-%build_flavor
 ln -s $image$suffix %buildroot/boot/$image$suffix
 ln -s initrd$suffix %buildroot/boot/initrd$suffix
 
-cp .config %buildroot/boot/config-%kernelrelease-%build_flavor
+cp -p .config %buildroot/boot/config-%kernelrelease-%build_flavor
 
 %if %install_vdso
 # Install the unstripped vdso's that are linked in the kernel image
