--- a/series.conf
+++ b/series.conf
@@ -525,6 +525,9 @@
 	########################################################
 	# PCI and PCI hotplug
 	########################################################
+	patches.fixes/pci-res-fix-01.patch
+	patches.fixes/pci-res-fix-02.patch
+	patches.fixes/pci-res-fix-03.patch
 
 	########################################################
 	# sysfs / driver core
