Update to Linux 2.6.36.2 - Obsoletes:   patches.drivers/alsa-hda-01-Fix-wrong-SPDIF-NID-assignment-for-CA0110   patches.drivers/alsa-hda-02-Add-some-workarounds-for-Creative-IBG   patches.drivers/alsa-hda-03-Add-workarounds-for-CT-IBG-controllers   patches.fixes/hpet-unmap-unused-I-O-space.patch   patches.fixes/net-Limit-socket-I-O-iovec-total-length.patch   patches.fixes/tty-restore-tty_ldisc_wait_idle.patch - Refresh patches.suse/SoN-22-netvm.patch

--- a/series.conf
+++ b/series.conf
@@ -28,6 +28,7 @@
 	# Send separate patches upstream if you find a problem...
 	########################################################
 	patches.kernel.org/patch-2.6.36.1
+	patches.kernel.org/patch-2.6.36.1-2
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -469,8 +470,6 @@
 	patches.drivers/dynamic_debug_6.patch
 	patches.drivers/dynamic_debug_7.patch
 
-	patches.fixes/tty-restore-tty_ldisc_wait_idle.patch
-
 	########################################################
 	# Storage
 	########################################################
@@ -529,7 +528,6 @@
         patches.drivers/tg3-entropy-source.patch
 
 	patches.drivers/tg3-5785-and-57780-asic-revs-not-working.patch
-	patches.fixes/net-Limit-socket-I-O-iovec-total-length.patch
 
 	########################################################
 	# Wireless Networking
@@ -576,9 +574,6 @@
 	##########################################################
 	# Sound
 	##########################################################
-	patches.drivers/alsa-hda-01-Fix-wrong-SPDIF-NID-assignment-for-CA0110
-	patches.drivers/alsa-hda-02-Add-some-workarounds-for-Creative-IBG
-	patches.drivers/alsa-hda-03-Add-workarounds-for-CT-IBG-controllers
 
 	########################################################
 	# Other driver fixes
@@ -591,7 +586,6 @@
 	# Allow setting maximum number of raw devices
 	patches.suse/raw_device_max_minors_param.diff
 	patches.suse/no-partition-scan
-	patches.fixes/hpet-unmap-unused-I-O-space.patch
 
 	########################################################
 	# Other drivers we have added to the tree
