- Update Xen config files (XEN_NETDEV_LOOPBACK=n). - supported.conf: Update.

--- a/supported.conf
+++ b/supported.conf
@@ -2041,6 +2041,7 @@
 -		kernel/drivers/watchdog/wdrtas			# watchdog for RTAS on pSeries JS20
 +isa		kernel/drivers/watchdog/wdt
 		kernel/drivers/watchdog/wdt_pci			# Driver for the ICS PCI-WDT500/501 watchdog cards
+		kernel/drivers/watchdog/xen_wdt				# Xen pv watchdog driver
 		kernel/drivers/xen/blkback/blkbk			# Xen block device backend
 		kernel/drivers/xen/blkback/blkback-pagemap
 +base		kernel/drivers/xen/blkfront/xenblk			# Xen block device frontend
@@ -2050,17 +2051,17 @@
 		kernel/drivers/xen/evtchn
 		kernel/drivers/xen/gntdev/gntdev
 		kernel/drivers/xen/netback/netbk			# Xen network device backend
-		kernel/drivers/xen/netback/netloop			# Xen network loopback device
+-		kernel/drivers/xen/netback/netloop			# Xen network loopback device
 +base		kernel/drivers/xen/netfront/xennet			# Xen network device frontend
 		kernel/drivers/xen/pciback/pciback			# Xen PCI device backend
--		kernel/drivers/xen/scsiback/xen-scsibk
--		kernel/drivers/xen/scsifront/xenscsi
+		kernel/drivers/xen/scsiback/xen-scsibk
+		kernel/drivers/xen/scsifront/xenscsi
 +external	kernel/drivers/xen/sfc_netback/sfc_netback
 +external	kernel/drivers/xen/sfc_netback/sfc_netfront
 +external	kernel/drivers/xen/sfc_netutil/sfc_netutil
 		kernel/drivers/xen/tpmback/tpmbk			# Xen TPM device backend
--		kernel/drivers/xen/usbback/usbbk
--		kernel/drivers/xen/usbfront/xen-hcd
+		kernel/drivers/xen/usbback/usbbk
+		kernel/drivers/xen/usbfront/xen-hcd
 		kernel/drivers/xen/xenbus/xenbus_be			# Xen XenBus backend driver support module
 		kernel/fs/9p/9p
 -		kernel/fs/adfs/adfs
