- rpm/kernel-source.spec.in: Define %kernelrelease

--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -19,7 +19,7 @@
 # icecream 0
 
 %define srcversion @SRCVERSION@
-%define patchversion @PATCHVERSION@
+%define kernelrelease @PATCHVERSION@
 %define variant @VARIANT@%{nil}
 
 %include %_sourcedir/kernel-spec-macros
