- Revert "PCI: fix pci_bus_alloc_resource() hang, prefer positive   decode" (bnc#655048). - Revert "x86: allocate space within a region top-down"   (bnc#655048). - Revert "x86/PCI: allocate space from the end of a region,   not the beginning" (bnc#655048). - Revert "PCI: allocate bus resources from the top down"   (bnc#655048). - Revert "resources: support allocating space within a region   from the top down" (bnc#655048). - resources: add arch hook for preventing allocation in reserved   areas (bnc#655048). - x86: avoid low BIOS area when allocating address space   (bnc#655048). - x86: avoid E820 regions when allocating address space   (bnc#655048). - x86: avoid high BIOS area when allocating address space   (bnc#655048). - Refresh patches.xen/xen3-patch-2.6.34.

--- a/series.conf
+++ b/series.conf
@@ -94,6 +94,16 @@
 
 	patches.suse/sched-automated-per-session-task-groups
 
+	patches.fixes/res-0001-Revert-PCI-fix-pci_bus_alloc_resource-hang-prefer-po.patch
+	patches.fixes/res-0002-Revert-x86-allocate-space-within-a-region-top-down.patch
+	patches.fixes/res-0003-Revert-x86-PCI-allocate-space-from-the-end-of-a-regi.patch
+	patches.fixes/res-0004-Revert-PCI-allocate-bus-resources-from-the-top-down.patch
+	patches.fixes/res-0005-Revert-resources-support-allocating-space-within-a-r.patch
+	patches.fixes/res-0006-resources-add-arch-hook-for-preventing-allocation-in.patch
+	patches.fixes/res-0007-x86-avoid-low-BIOS-area-when-allocating-address-spac.patch
+	patches.fixes/res-0008-x86-avoid-E820-regions-when-allocating-address-space.patch
+	patches.fixes/res-0009-x86-avoid-high-BIOS-area-when-allocating-address-spa.patch
+
         ########################################################
         # Architecture-specific patches. These used to be all
         # at the end of series.conf, but since we don't do
