--- a/series.conf
+++ b/series.conf
@@ -789,6 +789,7 @@
 	patches.xen/xen3-patch-2.6.37-rc3
 	patches.xen/xen3-patch-2.6.37-rc3-rc4
 	patches.xen/xen3-patch-2.6.37-rc4-rc5
+	patches.xen/xen3-res-0002-Revert-x86-allocate-space-within-a-region-top-down.patch
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-mark_rodata_rw.patch
