- cciss: Fix build.

--- a/series.conf
+++ b/series.conf
@@ -39,4 +39,5 @@
 	########################################################
 	patches.rpmify/firmware-path
 	patches.rpmify/easycap-buildfix
+	patches.rpmify/cciss-build
 
