--- a/series.conf
+++ b/series.conf
@@ -33,6 +33,7 @@
 	patches.kernel.org/patch-2.6.37-rc3-rc4
 	patches.kernel.org/patch-2.6.37-rc4-rc5
 	patches.kernel.org/patch-2.6.37-rc5-rc6
+	patches.kernel.org/patch-2.6.37-rc6-rc7
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -94,16 +95,6 @@
 +needs_update-33	patches.suse/sched-revert-latency-defaults
 
 	patches.suse/sched-automated-per-session-task-groups
-
-	patches.fixes/res-0001-Revert-PCI-fix-pci_bus_alloc_resource-hang-prefer-po.patch
-	patches.fixes/res-0002-Revert-x86-allocate-space-within-a-region-top-down.patch
-	patches.fixes/res-0003-Revert-x86-PCI-allocate-space-from-the-end-of-a-regi.patch
-	patches.fixes/res-0004-Revert-PCI-allocate-bus-resources-from-the-top-down.patch
-	patches.fixes/res-0005-Revert-resources-support-allocating-space-within-a-r.patch
-	patches.fixes/res-0006-resources-add-arch-hook-for-preventing-allocation-in.patch
-	patches.fixes/res-0007-x86-avoid-low-BIOS-area-when-allocating-address-spac.patch
-	patches.fixes/res-0008-x86-avoid-E820-regions-when-allocating-address-space.patch
-	patches.fixes/res-0009-x86-avoid-high-BIOS-area-when-allocating-address-spa.patch
 
         ########################################################
         # Architecture-specific patches. These used to be all
