- sched: fix autogroup /proc interface race.

--- a/series.conf
+++ b/series.conf
@@ -95,6 +95,7 @@
 +needs_update-33	patches.suse/sched-revert-latency-defaults
 
 	patches.suse/sched-automated-per-session-task-groups
+	patches.fixes/sched-fix-autogroup-proc-interface-race
 
 	# This is not the correct fix. The check can be done at
 	# cgroup exit instead with less of an impact on performance.
