- Update to 2.6.37-rc8.   - Eliminated 1 patch.

--- a/series.conf
+++ b/series.conf
@@ -34,6 +34,7 @@
 	patches.kernel.org/patch-2.6.37-rc4-rc5
 	patches.kernel.org/patch-2.6.37-rc5-rc6
 	patches.kernel.org/patch-2.6.37-rc6-rc7
+	patches.kernel.org/patch-2.6.37-rc7-rc8
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -510,7 +511,6 @@
 	patches.suse/nameif-track-rename.patch
 	patches.fixes/tg3-fix-default-wol.patch
 	patches.drivers/ehea-modinfo.patch
-	patches.fixes/tehuti-firmware-name
 
 	# entropy FATE##307517
         patches.drivers/bnx2-entropy-source.patch
