--- a/series.conf
+++ b/series.conf
@@ -97,6 +97,7 @@
 
 	patches.suse/sched-automated-per-session-task-groups
 	patches.fixes/sched-fix-autogroup-proc-interface-race
+	patches.fixes/taskstats-better-ifdef
 
 	# This is not the correct fix. The check can be done at
 	# cgroup exit instead with less of an impact on performance.
