- rpm/kernel-source.spec.in: Move the source tree if %kernelrelease is   different from the tarball version.

--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -173,6 +173,10 @@ ln -sf linux%variant linux%variant  # dummy symlink
 
 # Unpack the vanilla kernel sources
 tar -xjf %_sourcedir/linux-%srcversion.tar.bz2
+if test "%srcversion" != "%kernelrelease%variant"; then
+	mv linux-%srcversion linux-%kernelrelease%variant
+fi
+
 
 %if %do_vanilla
 cp -al "%buildroot/%src_install_dir" linux-%kernelrelease-vanilla
