--- a/series.conf
+++ b/series.conf
@@ -73,6 +73,7 @@
 	patches.suse/export-release_open_intent
 	patches.suse/export-security_inode_permission
 +still_needed-33?	patches.suse/export-sync_page_range
+	patches.fixes/reiserfs-xattr-crash-fix
 
 	########################################################
 	# Bug workarounds for binutils
