--- a/series.conf
+++ b/series.conf
@@ -535,7 +535,7 @@
 	patches.suse/wireless-no-aes-select
 	patches.suse/b43-missing-firmware-info.patch
 	patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices
-	patches.fixes/rt2x00-Fix-channel-configuration-for-RF3052.patch
+	# patches.fixes/rt2x00-Fix-channel-configuration-for-RF3052.patch (broken)
 
 	########################################################
 	# iSCSI
