- Update Xen patches to 2.6.37-final and c/s 1062.

--- a/series.conf
+++ b/series.conf
@@ -771,15 +771,11 @@
 	patches.xen/xen3-patch-2.6.34
 	patches.xen/xen3-patch-2.6.35
 	patches.xen/xen3-patch-2.6.36
-	patches.xen/xen3-patch-2.6.37-rc3
-	patches.xen/xen3-patch-2.6.37-rc3-rc4
-	patches.xen/xen3-patch-2.6.37-rc4-rc5
-	patches.xen/xen3-res-0002-Revert-x86-allocate-space-within-a-region-top-down.patch
+	patches.xen/xen3-patch-2.6.37
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-mark_rodata_rw.patch
 	patches.xen/xen3-acpi_processor_check_maxcpus.patch
-#	patches.xen/xen3-kdb-x86
 	patches.xen/xen3-stack-unwind
 	patches.xen/xen3-x86_64-unwind-annotations
 
@@ -810,7 +806,6 @@
 	patches.xen/xen-netback-generalize
 	patches.xen/xen-netback-multiple-tasklets
 	patches.xen/xen-netback-kernel-threads
-	patches.xen/xen-netback-extend-pull
 	patches.xen/xen-netback-allow-large-mtu
 	patches.xen/xen-tmem-v1
 	patches.xen/xen-dcdbas
@@ -825,7 +820,6 @@
 	patches.xen/xen-x86-no-lapic
 	patches.xen/xen-x86-pmd-handling
 	patches.xen/xen-x86-bigmem
-	patches.xen/xen-x86-machphys-prediction
 	patches.xen/xen-x86-exit-mmap
 	patches.xen/xen-x86-per-cpu-vcpu-info
 	patches.xen/xen-x86-msr-on-pcpu
