- novfs: NCP Fragments can be upto 64k in size (bnc#625965).

--- a/series.conf
+++ b/series.conf
@@ -375,6 +375,7 @@
 	patches.suse/novfs-use-evict_inode
 	patches.fixes/novfs-unlink-oops
 	patches.suse/novfs-2.6.37-api-changes
+	patches.fixes/novfs-fragment-size-fix.patch
 
 	########################################################
 	# other filesystem stuff: richacls
