- fs/btrfs: Fix build of ctree.

--- a/series.conf
+++ b/series.conf
@@ -38,4 +38,6 @@
 	# will be included in the vanilla package.
 	########################################################
 	patches.rpmify/firmware-path
+	# btrfs fix
+	patches.rpmify/btrfs-buildfix
 
