--- a/series.conf
+++ b/series.conf
@@ -545,6 +545,7 @@
 	patches.suse/elousb-2.6.35-api-changes
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
 	patches.drivers/input-Add-LED-support-to-Synaptics-device
+	patches.fixes/input-introduce-notimeout-blacklist-for-Dell-Vostro-.patch
 
 	##########################################################
 	# Sound
