- Revert %kernelrelease changes originally made on the vanilla branch,   they break on master and must be done differently.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -18,7 +18,7 @@
 # norootforbuild
 
 %define srcversion @SRCVERSION@
-%define kernelrelease @PATCHVERSION@
+%define patchversion @PATCHVERSION@
 %define variant @VARIANT@%{nil}
 
 %include %_sourcedir/kernel-spec-macros
@@ -227,14 +227,8 @@ if test -e ../config.addon/%cpu_arch_flavor; then
 else
 	cp ../config/%cpu_arch_flavor .config
 fi
-
-MAKE_ARGS="$MAKE_ARGS -C %build_src_dir O=$PWD"
-
-krel=%kernelrelease-%build_flavor
-kver=$(make -s kernelversion $MAKE_ARGS)
-# We need to store krel minus the kver prefix to CONFIG_LOCALVERSION
 %build_src_dir/scripts/config \
-	--set-str CONFIG_LOCALVERSION ${krel#$kver} \
+	--set-str CONFIG_LOCALVERSION -%release_major-%build_flavor \
 	--enable  CONFIG_SUSE_KERNEL \
 %if 0%{?__debug_package:1}
 	--enable  CONFIG_DEBUG_INFO \
@@ -243,6 +237,7 @@ kver=$(make -s kernelversion $MAKE_ARGS)
 	--disable CONFIG_DEBUG_INFO
 %endif
 
+MAKE_ARGS="$MAKE_ARGS -C %build_src_dir O=$PWD"
 if test -e %_sourcedir/TOLERATE-UNKNOWN-NEW-CONFIG-OPTIONS; then
     yes '' | make oldconfig $MAKE_ARGS
 else
