- mISDN: Add support for group membership check (bnc#564423).

--- a/series.conf
+++ b/series.conf
@@ -513,6 +513,12 @@
 	patches.suse/wireless-no-aes-select
 	patches.suse/b43-missing-firmware-info.patch
 	patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices
+
+	########################################################
+	# ISDN
+	########################################################
+	patches.fixes/misdn-add-support-for-group-membership-check
+
 	########################################################
 	# iSCSI
 	########################################################
