--- a/series.conf
+++ b/series.conf
@@ -263,6 +263,8 @@
 	# Queued for 2.6.36 -> just revert after some time
 	patches.fixes/acpi_ec_sys_access_user_space_with_get_user.patch
 
+	patches.arch/acpi_fix_global_lock_acquisition.patch
+
 	########################################################
 	# CPUFREQ
 	########################################################
