- ACPI / ACPICA: Initialize the global lock spinlock as   appropriate (bnc#637377).

--- a/series.conf
+++ b/series.conf
@@ -264,6 +264,7 @@
 	patches.fixes/acpi_ec_sys_access_user_space_with_get_user.patch
 
 	patches.arch/acpi_fix_global_lock_acquisition.patch
+	patches.arch/acpi_init_global_lock.patch
 
 	########################################################
 	# CPUFREQ
