-    revert: ipv6: don't flush routes when setting loopback down.

--- a/series.conf
+++ b/series.conf
@@ -509,6 +509,8 @@
         patches.drivers/tg3-entropy-source.patch
 
 	patches.drivers/tg3-5785-and-57780-asic-revs-not-working.patch
+	patches.fixes/ipv6-revert-dont-flush-routes-when-setting-loopback-down.patch
+	
 
 	########################################################
 	# Wireless Networking
