--- a/series.conf
+++ b/series.conf
@@ -495,6 +495,7 @@
 	patches.fixes/sd_liberal_28_sense_invalid.diff
 
 	patches.fixes/scsi-ibmvscsi-module_alias.patch
+	patches.fixes/fix-ata-panic-with-ata_id
 
 	########################################################
 	# DRM/Video
