- supported.conf: Added rc_core as a dependency.

--- a/supported.conf
+++ b/supported.conf
@@ -973,6 +973,7 @@
 +isa		kernel/drivers/media/radio/radio-trust
 +isa		kernel/drivers/media/radio/radio-typhoon
 +isa		kernel/drivers/media/radio/radio-zoltrix
+		kernel/drivers/media/rc/rc_core
 		kernel/drivers/media/video/adv7170			# Analog Devices ADV7170 video encoder driver
 		kernel/drivers/media/video/adv7175			# Analog Devices ADV7175 video encoder driver
 -		kernel/drivers/media/video/au0828/au0828		# depends on dvb-core
