- netfilter: Implement RFC 1123 for FTP conntrack (bnc#466279).

--- a/series.conf
+++ b/series.conf
@@ -438,6 +438,7 @@
 
 	patches.suse/netfilter-ip_conntrack_slp.patch
 	patches.fixes/fix-nf_conntrack_slp
+	patches.fixes/netfilter-implement-rfc-1123-for-ftp-conntrack
 
 	########################################################
 	#
