- Fix prlimit64 for suid/sgid processes (bnc#668262).

--- a/series.conf
+++ b/series.conf
@@ -94,6 +94,7 @@
 	# I'm accepting it for now because it fixes the crashes that
 	# many of us have been seeing with 2.6.37-rcX.  -jeffm
 	patches.fixes/sched-cgroup-use-exit-hook-to-avoid-use-after-free-crash
+	patches.fixes/fix-prlimit64-for-suid-sgid-processes.patch
 
         ########################################################
         # Architecture-specific patches. These used to be all
