- block: loop queue_lock null pointer derefence in blk_throtl_exit   v3 (bnc#666598).

--- a/series.conf
+++ b/series.conf
@@ -498,6 +498,7 @@
 
 	patches.fixes/scsi-ibmvscsi-module_alias.patch
 	patches.fixes/fix-ata-panic-with-ata_id
+	patches.fixes/loop-queue_lock-null-pointer-derefence-in-blk_throtl_exit-v3.patch
 
 	########################################################
 	# DRM/Video
