--- a/series.conf
+++ b/series.conf
@@ -573,6 +573,7 @@
 	##########################################################
 	# Sound
 	##########################################################
+	patches.drivers/alsa-hda-0001-Fix-memory-leaks-in-conexant-jack-arrays
 
 	########################################################
 	# Other driver fixes
