- Fix jiffy calculations in calibrate_delay_direct to handle   overflow.

--- a/series.conf
+++ b/series.conf
@@ -230,6 +230,7 @@
 	########################################################
 	patches.suse/connector-read-mostly
 	patches.suse/kbd-ignore-gfx.patch
+	patches.fixes/calibrate-jiffy-overflow
 
 	########################################################
 	#
