- x86, mtrr: avoid MTRR reprogramming on BP during boot on (bnc#623393).

--- a/series.conf
+++ b/series.conf
@@ -138,6 +138,8 @@
 
 	patches.suse/x86-mark_rodata_rw.patch
 
+	patches.arch/x86-mtrr-avoid-MTRR-reprogramming-on-BP-during-boot-on.patch
+
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
         ########################################################
