- Updated to 2.6.38-rc3.   - Eliminated 2 patches.

--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-2.6.38-rc1
 	patches.kernel.org/patch-2.6.38-rc1-rc2
+	patches.kernel.org/patch-2.6.38-rc2-rc3
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -393,6 +394,10 @@
 	patches.suse/richacl-fix
 
 	########################################################
+	# other filesystem stuff
+	########################################################
+
+	########################################################
 	# Swap-over-NFS
 	########################################################
 	patches.suse/SoN-01-mm-setup_per_zone_wmarks.patch
@@ -428,7 +433,7 @@
 	patches.suse/SoN-31-fix-null-pointer-dereference
 	patches.suse/SoN-32-fix-kernel-bug-with-multiple-swapfiles
 
-	# don't want to rediff SoN until this gets more testing 
+   # don't want to rediff SoN until this gets more testing 
 	patches.suse/slab-handle-memoryless-nodes-v2a.patch
 	patches.suse/SoN-fix
 
@@ -482,7 +487,6 @@
 	patches.fixes/sd_liberal_28_sense_invalid.diff
 
 	patches.fixes/scsi-ibmvscsi-module_alias.patch
-	patches.fixes/fix-ata-panic-with-ata_id
 
 	########################################################
 	# DRM/Video
@@ -505,7 +509,6 @@
         patches.drivers/tg3-entropy-source.patch
 
 	patches.drivers/tg3-5785-and-57780-asic-revs-not-working.patch
-	patches.fixes/ipv6-revert-dont-flush-routes-when-setting-loopback-down.patch
 	
 
 	########################################################
