- hfs: avoid crash in hfs_bnode_create (bnc#552250).

--- a/series.conf
+++ b/series.conf
@@ -396,6 +396,7 @@
 	########################################################
 	# other filesystem stuff
 	########################################################
+	patches.fixes/hfs-avoid-crash-in-hfs_bnode_create
 
 	########################################################
 	# Swap-over-NFS
