--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -21,6 +21,7 @@
 %define srcversion @SRCVERSION@
 %define patchversion @PATCHVERSION@
 %define variant @VARIANT@%{nil}
+%define vanilla_only @VANILLA_ONLY@
 
 %include %_sourcedir/kernel-spec-macros
 
@@ -152,35 +153,42 @@ echo "Symbol(s): %symbols"
 mkdir -p $RPM_BUILD_ROOT/usr/src
 cd $RPM_BUILD_ROOT/usr/src
 
-ln -sf linux%variant linux%variant  # dummy symlink
-
 # Unpack the vanilla kernel sources
 tar -xjf %_sourcedir/linux-%srcversion.tar.bz2
 if test "%srcversion" != "%kernelrelease%variant"; then
 	mv linux-%srcversion linux-%kernelrelease%variant
 fi
+find linux-%kernelrelease%variant -name .gitignore | xargs rm -f
 
 
 %if %do_vanilla
-cp -al "%buildroot/%src_install_dir" linux-%kernelrelease-vanilla
+%if %vanilla_only
+	mv \
+%else
+	cp -al \
+%endif
+	linux-%kernelrelease%variant linux-%kernelrelease-vanilla
 cd linux-%kernelrelease-vanilla
 %_sourcedir/apply-patches --vanilla %_sourcedir/series.conf %my_builddir %symbols
-rm -f $(find . -name ".gitignore")
 cd ..
 %endif
 
-cd "%buildroot/%src_install_dir"
+%if ! %vanilla_only
+ln -sf linux%variant linux%variant  # dummy symlink
+
+cd linux-%kernelrelease%variant
 %_sourcedir/apply-patches %_sourcedir/series.conf %my_builddir %symbols
-rm -f $(find . -name ".gitignore")
 
 if [ -f %_sourcedir/localversion ] ; then
     cat %_sourcedir/localversion > localversion
 fi
+%endif
 
 # Hardlink duplicate files automatically (from package fdupes).
 %fdupes $RPM_BUILD_ROOT
 
 %install
+%if ! %vanilla_only
 # Install the documentation and example Kernel Module Package.
 DOC=$RPM_BUILD_ROOT/usr/share/doc/packages/%name
 mkdir -p $DOC
@@ -220,6 +228,7 @@ popd
 /usr/share/doc/packages/%name
 /etc/rpm/macros.kernel-source
 /usr/lib/rpm/kernel-module-subpackage
+%endif
 
 %if %do_vanilla
 %files vanilla
