--- a/series.conf
+++ b/series.conf
@@ -533,6 +533,7 @@
 	patches.suse/wireless-no-aes-select
 	patches.suse/b43-missing-firmware-info.patch
 	patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices
+	patches.fixes/staging-rt2860-Fix-incorrect-netif_stop_queue-usage.patch
 
 	########################################################
 	# ISDN
