--- a/series.conf
+++ b/series.conf
@@ -649,9 +649,9 @@
         # Other patches for debugging
         ########################################################
 	patches.suse/crasher-26.diff
-+needs_update	patches.suse/stack-unwind
+	patches.suse/stack-unwind
 	patches.suse/no-frame-pointer-select
-+needs_update	patches.arch/x86_64-unwind-annotations
+	patches.arch/x86_64-unwind-annotations
 
         ########################################################
         # Kdump
