- orinoco: allow IW_AUTH_MFP to pass through (bnc#661624).

--- a/series.conf
+++ b/series.conf
@@ -534,6 +534,7 @@
 	patches.suse/b43-missing-firmware-info.patch
 	patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices
 	patches.fixes/staging-rt2860-Fix-incorrect-netif_stop_queue-usage.patch
+	patches.fixes/orinoco-allow-IW_AUTH_MFP-to-pass-through.patch
 
 	########################################################
 	# ISDN
