--- a/series.conf
+++ b/series.conf
@@ -30,6 +30,7 @@
 	patches.kernel.org/patch-2.6.38-rc1
 	patches.kernel.org/patch-2.6.38-rc1-rc2
 	patches.kernel.org/patch-2.6.38-rc2-rc3
+	patches.kernel.org/patch-2.6.38-rc3-rc4
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -560,7 +561,6 @@
 	##########################################################
 	# Sound
 	##########################################################
-	patches.drivers/alsa-hda-0001-Fix-memory-leaks-in-conexant-jack-arrays
 
 	########################################################
 	# Other driver fixes
