--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -158,7 +158,6 @@ tar -xjf %_sourcedir/linux-%srcversion.tar.bz2
 if test "%srcversion" != "%kernelrelease%variant"; then
 	mv linux-%srcversion linux-%kernelrelease%variant
 fi
-find linux-%kernelrelease%variant -name .gitignore | xargs rm -f
 
 
 %if %do_vanilla
@@ -170,6 +169,7 @@ find linux-%kernelrelease%variant -name .gitignore | xargs rm -f
 	linux-%kernelrelease%variant linux-%kernelrelease-vanilla
 cd linux-%kernelrelease-vanilla
 %_sourcedir/apply-patches --vanilla %_sourcedir/series.conf %my_builddir %symbols
+rm -f $(find . -name ".gitignore")
 cd ..
 %endif
 
@@ -178,6 +178,7 @@ ln -sf linux%variant linux%variant  # dummy symlink
 
 cd linux-%kernelrelease%variant
 %_sourcedir/apply-patches %_sourcedir/series.conf %my_builddir %symbols
+rm -f $(find . -name ".gitignore")
 
 if [ -f %_sourcedir/localversion ] ; then
     cat %_sourcedir/localversion > localversion
