- ALSA: hda - Fix missing CA initialization for HDMI/DP   (bnc#670577).

--- a/series.conf
+++ b/series.conf
@@ -579,6 +579,7 @@
 	# Sound
 	##########################################################
 	patches.drivers/alsa-hda-0001-Fix-memory-leaks-in-conexant-jack-arrays
+	patches.drivers/alsa-hda-0002-Fix-missing-CA-initialization-for-HDMI-DP
 
 	########################################################
 	# Other driver fixes
