- rpm/kernel-source.spec.in: Set timestamp of sources to the commit   timestamp, so that they are always older than generated files in   /usr/src/linux-obj (bnc#669669).

--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -223,6 +223,14 @@ perl "%_sourcedir/group-source-files.pl" \
 	-L "%src_install_dir"
 popd
 
+# kernel-source and kernel-$flavor-devel are built independently, but the
+# shipped sources (/usr/src/linux/) need to be older than generated files
+# (/usr/src/linux-obj). We rely on the git commit timestamp to not point into
+# the future and be thus lower than the timestamps of files built from the
+# source (bnc#669669).
+ts="$(head -n1 %_sourcedir/source-timestamp)"
+find %buildroot/usr/src/linux* ! -type l | xargs touch -d "$ts"
+
 %post -f %name-post.sh
 
 %post -n kernel-devel%variant -f %name-post.sh
