--- a/series.conf
+++ b/series.conf
@@ -495,6 +495,11 @@
 	########################################################
 
 	########################################################
+	# video4linux
+	########################################################
+	patches.fixes/flexcop-fix-registering-braindead-stupid-names
+
+	########################################################
 	# Network
 	########################################################
 	patches.fixes/tulip-quad-NIC-ifdown
