--- a/series.conf
+++ b/series.conf
@@ -37,6 +37,7 @@
 	# Note that every patch in the patches.rpmify directory
 	# will be included in the vanilla package.
 	########################################################
+	patches.rpmify/git-extraversion
 	patches.rpmify/firmware-path
 	# build fixes
 
