- bridge: Fix mglist corruption that leads to memory corruption   (bnc#653547).

--- a/series.conf
+++ b/series.conf
@@ -530,7 +530,7 @@
 
 	patches.drivers/tg3-5785-and-57780-asic-revs-not-working.patch
 	patches.fixes/ipv6-revert-dont-flush-routes-when-setting-loopback-down.patch
-	
+	patches.fixes/bridge-fix-hash-list-corruption.patch
 
 	########################################################
 	# Wireless Networking
