- bridge: Replace mp->mglist hlist with a bool (bnc#653547).

--- a/series.conf
+++ b/series.conf
@@ -532,6 +532,7 @@
 	patches.fixes/ipv6-revert-dont-flush-routes-when-setting-loopback-down.patch
 	patches.fixes/bridge-fix-hash-list-corruption.patch
 	patches.fixes/bridge-fix-timer-arming.patch
+	patches.fixes/bridge-remove-hash-list.patch
 
 	########################################################
 	# Wireless Networking
