- Revert "ath9k: use per-device struct for pm_qos_* operations"   (bnc#667793).

--- a/series.conf
+++ b/series.conf
@@ -542,6 +542,7 @@
 	patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices
 	patches.fixes/staging-rt2860-Fix-incorrect-netif_stop_queue-usage.patch
 	patches.fixes/orinoco-allow-IW_AUTH_MFP-to-pass-through.patch
+	patches.fixes/0001-Revert-ath9k-use-per-device-struct-for-pm_qos_-opera.patch
 
 	########################################################
 	# ISDN
