- Revert "ath9k: Fix a DMA latency issue for Intel Pinetrail   platforms." (bnc#667793).

--- a/series.conf
+++ b/series.conf
@@ -544,6 +544,7 @@
 	patches.fixes/orinoco-allow-IW_AUTH_MFP-to-pass-through.patch
 	patches.fixes/0001-Revert-ath9k-use-per-device-struct-for-pm_qos_-opera.patch
 	patches.fixes/0002-Revert-ath9k-Remove-pm_qos-request-after-hw-unregist.patch
+	patches.fixes/0003-Revert-ath9k-Fix-a-DMA-latency-issue-for-Intel-Pinet.patch
 
 	########################################################
 	# ISDN
