- tty: add 'active' sysfs attribute to tty0 and console device.

--- a/series.conf
+++ b/series.conf
@@ -584,6 +584,7 @@
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
 	patches.drivers/input-Add-LED-support-to-Synaptics-device
 	patches.fixes/input-introduce-notimeout-blacklist-for-Dell-Vostro-.patch
+	patches.drivers/tty-add-active-sysfs-attribute-to-tty0-and-console-device
 
 	##########################################################
 	# Sound
