- ALSA: HDA: Add Lenovo vendor quirk for Conexant 205xx   (bnc#670946).

--- a/series.conf
+++ b/series.conf
@@ -591,6 +591,7 @@
 	##########################################################
 	patches.drivers/alsa-hda-0001-Fix-memory-leaks-in-conexant-jack-arrays
 	patches.drivers/alsa-hda-0002-Fix-missing-CA-initialization-for-HDMI-DP
+	patches.drivers/alsa-hda-0003-Add-Lenovo-vendor-quirk-for-Conexant-205xx
 
 	########################################################
 	# Other driver fixes
