--- a/series.conf
+++ b/series.conf
@@ -270,6 +270,8 @@
 	patches.arch/acpi_fix_global_lock_acquisition.patch
 	patches.arch/acpi_init_global_lock.patch
 
+	patches.fixes/PNP-ACPI-Use-DEVICE_ACPI_HANDLE-for-device-ACPI-handle-access.patch
+
 	########################################################
 	# CPUFREQ
 	########################################################
