- Revert "tpm_tis: Use timeouts returned from TPM" (bnc#673619).

--- a/series.conf
+++ b/series.conf
@@ -465,6 +465,7 @@
 	########################################################
 
 	patches.drivers/disable-catas_reset-by-default-to-avoid-problems-with-eeh.patch
+	patches.fixes/revert-tpm_tis-Use-timeouts-returned-from-TPM.patch
 
 	########################################################
 	# Storage
