- spi: fix build of OpenCores tiny driver.

--- a/series.conf
+++ b/series.conf
@@ -41,4 +41,5 @@
 	# build fixes
 	patches.rpmify/zcache-buildfix
 	patches.rpmify/0001-spi-Fix-Altera-SPI-build.patch
+	patches.rpmify/0002-spi-fix-build-of-OpenCores-tiny-driver.patch
 
