--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/patch-2.6.38-rc2-rc3
 	patches.kernel.org/patch-2.6.38-rc3-rc4
 	patches.kernel.org/patch-2.6.38-rc4-rc5
+	patches.kernel.org/patch-2.6.38-rc5-rc6
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -569,7 +570,6 @@
 	##########################################################
 	# Sound
 	##########################################################
-	patches.drivers/alsa-01-caiaq-Fix-possible-string-buffer-overflow
 
 	########################################################
 	# Other driver fixes
