- iwlwifi: cleanup iwl_good_ack_health (bnc#662733).

--- a/series.conf
+++ b/series.conf
@@ -542,6 +542,7 @@
 	patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices
 	patches.fixes/orinoco-allow-IW_AUTH_MFP-to-pass-through.patch
 	patches.fixes/ath9k-Fix-ath9k-prevents-CPU-to-enter-C3-states.patch
+	patches.drivers/iwl-cleanup-iwl_good_ack_health.patch
 
 	########################################################
 	# ISDN
