- iwlwifi: fix ack health for WiFi/BT combo devices (bnc#662733).

--- a/series.conf
+++ b/series.conf
@@ -543,6 +543,7 @@
 	patches.fixes/orinoco-allow-IW_AUTH_MFP-to-pass-through.patch
 	patches.fixes/ath9k-Fix-ath9k-prevents-CPU-to-enter-C3-states.patch
 	patches.drivers/iwl-cleanup-iwl_good_ack_health.patch
+	patches.drivers/iwl-fix-ack-health-for-WiFi-BT-combo-devices.patch
 
 	########################################################
 	# ISDN
