- iwlwifi: cleanup iwl_good_ack_health (bnc#662733).

--- a/series.conf
+++ b/series.conf
@@ -530,6 +530,7 @@
 	patches.suse/wireless-no-aes-select
 	patches.suse/b43-missing-firmware-info.patch
 	patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices
+	patches.drivers/iwl-cleanup-iwl_good_ack_health.patch
 
 	########################################################
 	# ISDN
