- block: kill loop_mutex (bnc#669394).

--- a/series.conf
+++ b/series.conf
@@ -503,6 +503,8 @@
 	patches.fixes/scsi-ibmvscsi-module_alias.patch
 	patches.fixes/loop-queue_lock-null-pointer-derefence-in-blk_throtl_exit-v3.patch
 
+	patches.fixes/loop-over-loop-hang-fix.patch
+
 	########################################################
 	# DRM/Video
 	########################################################
