- debugfs: Fix filesystem reference counting on debugfs_remove()   failure (bnc#668101).

--- a/series.conf
+++ b/series.conf
@@ -412,6 +412,8 @@
 	patches.suse/0015-ext4-Use-IS_POSIXACL-to-check-for-POSIX-ACL-support.patch
 	patches.suse/0016-ext4-Implement-richacl-support-in-ext4.patch
 
+	patches.fixes/debugfs_remove_corruption.diff
+
 	########################################################
 	# Swap-over-NFS
 	########################################################
