- rpm/kernel-binary.spec.in: Do not abort build because of   supported.conf inconsistency if %supported_modules_check == 0.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -528,6 +528,9 @@ if [ %CONFIG_MODULES = y ]; then
     %_sourcedir/split-modules -d %buildroot \
 	-o %my_builddir \
 	-b %kernel_build_dir/Module.base \
+%if ! %supported_modules_check
+	-i \
+%endif
 	-s %kernel_build_dir/Module.supported
 %if ! %split_extra
     cat %my_builddir/unsupported-modules >>%my_builddir/main-modules
