- Update to 2.6.38-rc7.   - Refresh patches.xen/xen-x86-no-lapic.   - Refresh patches.xen/xen3-patch-2.6.19.

--- a/series.conf
+++ b/series.conf
@@ -33,6 +33,7 @@
 	patches.kernel.org/patch-2.6.38-rc3-rc4
 	patches.kernel.org/patch-2.6.38-rc4-rc5
 	patches.kernel.org/patch-2.6.38-rc5-rc6
+	patches.kernel.org/patch-2.6.38-rc6-rc7
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -277,7 +278,6 @@
 	patches.fixes/cpufreq_ondemand_performance_optimise_default_settings.patch
 
 ## cpuidle perf events cleanups and related
-	patches.arch/perf_timechart_fix_idle_boxes.patch
 	patches.arch/perf_timechart_fix_zero_timestamps.patch
 
 	########################################################
@@ -570,7 +570,6 @@
 	##########################################################
 	# Sound
 	##########################################################
-	patches.drivers/alsa-usb-audio-fix-oops-due-to-cleanup-race-when-disconnect
 
 	########################################################
 	# Other driver fixes
