- Update to 2.6.37.3:   - obsoletes:     - patches.drivers/alsa-usb-audio-fix-oops-due-to-cleanup-race-when-disconnect.     - patches.drivers/e1000e-82579-PHY-incorrectly-identified-during-init.patch.     - patches.arch/acpi-debugfs-fix-buffer-overflows-double-free.patch.     - patches.fixes/loop-over-loop-hang-fix.patch. - Refresh patches.xen/xen-x86-no-lapic. - Refresh patches.xen/xen3-patch-2.6.19.

--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-2.6.37.1
 	patches.kernel.org/patch-2.6.37.1-2
+	patches.kernel.org/patch-2.6.37.2-3
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -269,8 +270,6 @@
 
 	patches.fixes/PNP-ACPI-Use-DEVICE_ACPI_HANDLE-for-device-ACPI-handle-access.patch
 
-	patches.arch/acpi-debugfs-fix-buffer-overflows-double-free.patch
-
 	########################################################
 	# CPUFREQ
 	########################################################
@@ -505,8 +504,6 @@
 	patches.fixes/scsi-ibmvscsi-module_alias.patch
 	patches.fixes/loop-queue_lock-null-pointer-derefence-in-blk_throtl_exit-v3.patch
 
-	patches.fixes/loop-over-loop-hang-fix.patch
-
 	########################################################
 	# DRM/Video
 	########################################################
@@ -523,7 +520,6 @@
 	patches.suse/nameif-track-rename.patch
 	patches.fixes/tg3-fix-default-wol.patch
 	patches.drivers/ehea-modinfo.patch
-	patches.drivers/e1000e-82579-PHY-incorrectly-identified-during-init.patch
 
 	# entropy FATE##307517
         patches.drivers/bnx2-entropy-source.patch
@@ -593,7 +589,6 @@
 	# Sound
 	##########################################################
 	patches.drivers/alsa-hda-0003-Add-Lenovo-vendor-quirk-for-Conexant-205xx
-	patches.drivers/alsa-usb-audio-fix-oops-due-to-cleanup-race-when-disconnect
 
 	########################################################
 	# Other driver fixes
