--- a/series.conf
+++ b/series.conf
@@ -512,6 +512,7 @@
 	# video4linux
 	########################################################
 	patches.fixes/flexcop-fix-registering-braindead-stupid-names
+	patches.fixes/media-Mantis-hopper-use-MODULE_DEVICE_TABLE.patch
 
 	########################################################
 	# Network
