- DiB7000M: add pid filtering (bnc#644807).

--- a/series.conf
+++ b/series.conf
@@ -513,6 +513,7 @@
 	########################################################
 	patches.fixes/flexcop-fix-registering-braindead-stupid-names
 	patches.fixes/media-Mantis-hopper-use-MODULE_DEVICE_TABLE.patch
+	patches.fixes/media-DiB7000M-add-pid-filtering.patch
 
 	########################################################
 	# Network
