- fix i386 unwind annotations.

--- a/series.conf
+++ b/series.conf
@@ -661,6 +661,7 @@
 	patches.suse/stack-unwind
 	patches.suse/no-frame-pointer-select
 	patches.arch/x86_64-unwind-annotations
+	patches.arch/i386-unwind-annotations
 
         ########################################################
         # Kdump
