- Linux: 2.6.38-rc8.   - Eliminated 1 patch.

--- a/series.conf
+++ b/series.conf
@@ -34,6 +34,7 @@
 	patches.kernel.org/patch-2.6.38-rc4-rc5
 	patches.kernel.org/patch-2.6.38-rc5-rc6
 	patches.kernel.org/patch-2.6.38-rc6-rc7
+	patches.kernel.org/patch-2.6.38-rc7-rc8
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -258,8 +259,6 @@
 
 	# Queued for 2.6.36 -> just revert after some time
 	patches.fixes/acpi_ec_sys_access_user_space_with_get_user.patch
-
-	patches.arch/acpi-debugfs-fix-buffer-overflows-double-free.patch
 
 	########################################################
 	# CPUFREQ
