--- a/series.conf
+++ b/series.conf
@@ -592,6 +592,7 @@
 	##########################################################
 	patches.drivers/alsa-hda-0003-Add-Lenovo-vendor-quirk-for-Conexant-205xx
 	patches.drivers/alsa-hda-0004-Fix-missing-EAPD-for-Acer-4930G
+	patches.drivers/alsa-hda-0005-Add-a-generic-fixup-callback-for-Realtek-codecs
 
 	########################################################
 	# Other driver fixes
